# libtools-helloworld

./: .gitignore  bootstrap.sh  configure.ac
lib/: Makefile.am  sys-params.h  sys-params.pc
src/: Makefile.am  main.pc
